crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@dual_reverse_relations_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Dual {
  username String @id @db.Text
  username_dual_rel DualRel[] @relation("DualRelUsername")
  checker_username_dual_rel DualRel[] @relation("DualRelCheckerUsername")

  @@map("dual")
}
