crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_missing_target_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Article struct {
    ID int64 `gorm:"column:id;primaryKey" json:"id"`
    ArticleUsers []ArticleUser `gorm:"foreignKey:ArticleID" json:"-"`
}

func (Article) TableName() string { return "article" }
