crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_multiple_junctions_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class User(models.Model):
    id = models.UUIDField(primary_key=True)
    medias_via_user_media_role = models.ManyToManyField("Media", through="UserMediaRole", related_name="+")
    medias_via_user_media_favorite = models.ManyToManyField("Media", through="UserMediaFavorite", related_name="+")

    class Meta:
        db_table = "user"
