crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_multiple_junctions_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
    "github.com/google/uuid"
)

type User struct {
    ID uuid.UUID `gorm:"column:id;primaryKey;type:uuid" json:"id"`
    UserMediaRoles []UserMediaRole `gorm:"foreignKey:UserID" json:"-"`
    UserMediaFavorites []UserMediaFavorite `gorm:"foreignKey:UserID" json:"-"`
}

func (User) TableName() string { return "user" }
