crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_multiple_junctions_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 376
expression: rendered
---
model User {
  id String @id
  user_media_role UserMediaRole[]
  user_media_favorite UserMediaFavorite[]

  @@map("user")
}
