crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_reserved_names_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class User(models.Model):
    id = models.IntegerField(primary_key=True)
    tags = models.TextField()
    tags2 = models.ManyToManyField("Tags", through="UserTags", related_name="+")
    pass_field = models.ManyToManyField("Pass", through="User_pass", related_name="+")

    class Meta:
        db_table = "user"
