crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_uninvolved_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type User struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    UserFriendsByUserID []UserFriends `gorm:"foreignKey:UserID" json:"-"`
    UserFriendsByFriendID []UserFriends `gorm:"foreignKey:FriendID" json:"-"`
}

func (User) TableName() string { return "user" }
